# myWork

./: CMakeLists.txt  learncplus.cpp  learncplus.h  learningep.c  learningep.h  main.c  matrix.c  matrix.h  myFunction.c  myFunction.h
Tasks/: string_.c  string_.h
libs/: CMakeLists.txt
libs/data_structures/vector/: vector.c  vector.h
